<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.wordpress.electron0zero.hisabi.Help">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help"
        android:gravity="center"
        android:textSize="40sp"
        android:textColor="@color/colorPrimary"
        android:id="@+id/textHelp"
        android:paddingBottom="10sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textIntro"
        android:gravity="center"
        android:text="@string/textIntro"
        android:textSize="20sp"
        android:paddingBottom="10sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textUse"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:text="@string/how_to_use"
        android:paddingBottom="10sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textUseDetails"
        android:gravity="center"
        android:textSize="20sp"
        android:paddingBottom="10sp"
        android:text="@string/textUseDetails"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textTech"
        android:gravity="center"
        android:textSize="30sp"
        android:paddingBottom="10sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/measurement_details"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textTechDetails1"
        android:gravity="center"
        android:textSize="20sp"
        android:paddingBottom="10sp"
        android:text="@string/textTechDetails"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textTechDetails2"
        android:gravity="center"
        android:textSize="20sp"
        android:paddingBottom="10sp"
        android:text="@string/textTechDetails2"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textTechDetails3"
        android:gravity="center"
        android:textSize="20sp"
        android:paddingBottom="10sp"
        android:text="@string/textTechDetails3"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textTechDetails4"
            android:gravity="center"
            android:textSize="20sp"
            android:paddingBottom="10sp"
            android:text="@string/textTechDetails4"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textDisc"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="@color/colorPrimary"
            android:paddingBottom="10sp"
            android:text="@string/disclaimer"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textDiscDetails"
            android:gravity="center"
            android:textSize="20sp"
            android:paddingBottom="10sp"
            android:text="@string/textDiscDetails"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textAbout"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="@color/colorPrimary"
            android:paddingBottom="10sp"
            android:text="@string/about"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textAboutDetails"
            android:gravity="center"
            android:textSize="20sp"
            android:paddingBottom="10sp"
            android:text="@string/textAboutDetails"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/twitter"
            android:id="@+id/buttonTwitter"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:onClick="goToTwitter"/>



    </LinearLayout>
    </ScrollView>

</RelativeLayout>
